# rembg-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md  cargo-publish.sh  download_model.sh  rembg-rs  test-build.sh  test.sh
examples/: advanced.rs  basic.rs  discord_bot.rs
src/: background_removal.rs  clean_sticker_border.rs  cli.rs  compress_png.rs  error.rs  image_processor.rs  lib.rs  main.rs  manager.rs  model.rs  options.rs  rembg.rs  result.rs
src/cli/: cli.rs
src/processor/: apply_mask.rs  mod.rs  postprocess_mask.rs
