[package]
name = "rembg-rs"
version = "0.1.0"
edition = "2021"
authors = ["WarRaft"]
description = "A Rust utility for removing backgrounds from art-style images using neural networks"
license = "MIT"
repository = "https://github.com/WarRaft/rembg-rs"
keywords = ["image", "background-removal", "neural-network", "onnx", "computer-vision"]
categories = ["multimedia::images", "command-line-utilities"]

[[bin]]
name = "rembg-rs"
path = "src/main.rs"

[dependencies]
# Command-line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Image processing
image = { version = "0.25.8", features = ["png", "jpeg", "webp"] }

# ONNX Runtime for neural network inference
ort = { version = "1.16.3", features = ["copy-dylibs"] }

# Tensor operations
ndarray = "0.16.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true